--- a/src/app/features/gis/components/quotation/components/quotation-conversion/quotation-conversion.component.html
+++ b/src/app/features/gis/components/quotation/components/quotation-conversion/quotation-conversion.component.html
@@ -94,10 +94,18 @@
         <!-- Effective From Date -->
         <div class="field mb-4 w-full">
           <label for="cover-From" class="quote-label" id="cover-From">
-            Effective date from</label>
-          <p-calendar name="withEffectiveFromDate"
-            [dateFormat]="dateFormat" [showIcon]="true" [showButtonBar]="true"
-            [placeholder]="coverFrom ? coverFrom : todaysDate" [minDate]="minDate"
+            Effective date from
+          </label>
+          <p-calendar
+            name="withEffectiveFromDate"
+            [(ngModel)]="fromDate"
+            [dateFormat]="dateFormat"
+            [showIcon]="true"
+            [showButtonBar]="true"
+            [placeholder]="'Select start date'"
+            [minDate]="minDate"
+            (onSelect)="handleDateSelection($event, 'from')"
+            (onClear)="clearDateFilters()"
             [style]="{'width':'100%', 'height':'38px'}">
           </p-calendar>
         </div>
@@ -107,10 +115,18 @@
         <!-- Effective To Date -->
         <div class="field mb-4 w-full">
           <label for="cover-To" class="quote-label" id="cover-To">
-            Effective date to</label>
-          <p-calendar name="withEffectiveToDate"
-            [dateFormat]="dateFormat" [showIcon]="true" [showButtonBar]="true"
-            [placeholder]="coverTo ? coverTo : todaysDate" [minDate]="minDate"
+            Effective date to
+          </label>
+          <p-calendar
+            name="withEffectiveToDate"
+            [(ngModel)]="toDate"
+            [dateFormat]="dateFormat"
+            [showIcon]="true"
+            [showButtonBar]="true"
+            [placeholder]="'Select end date'"
+            [minDate]="minToDate"
+            (onSelect)="handleDateSelection($event, 'to')"
+            (onClear)="clearDateFilters()"
             [style]="{'width':'100%', 'height':'38px'}">
           </p-calendar>
         </div>
