--- a/src/app/shared/components/client-search-modal/client-search-modal.component.html
+++ b/src/app/shared/components/client-search-modal/client-search-modal.component.html
@@ -5,7 +5,7 @@
       <div class="modal-body">
         <button type="button" #closebutton class="float-end btn-close"
           data-bs-dismiss="modal" aria-label="Close"></button>
-        <p class="text-start" id="selectClient"> {{'gis.quotation.select_a_client' | translate}}</p>
+        <p class="text-start title" id="selectClient"> {{'gis.quotation.select_a_client' | translate}}</p>
 
         <p-table
           #dt1
