VQ-3299:Ability to Filter by Product(Quotation Inquiry)

--- a/src/app/features/gis/components/quotation/components/quotation-inquiry/quotation-inquiry.component.css
+++ b/src/app/features/gis/components/quotation/components/quotation-inquiry/quotation-inquiry.component.css
@@ -91,4 +91,7 @@ text-decoration-skip-ink: none;
       width: 18%;
       /* padding-right: 10px; */
   }
+  #quote-input{
+    height:35px;
+  }
 
