--- a/src/app/features/gis/components/quotation/components/quotation-conversion/quotation-conversion.component.css
+++ b/src/app/features/gis/components/quotation/components/quotation-conversion/quotation-conversion.component.css
@@ -99,3 +99,16 @@
   display: flex;
   align-items: center;
 }
+
+#action-buttons{
+  color:rgba(0, 82, 155, 1);
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 16.41px;
+  text-align: left;
+  text-decoration-line: underline;
+  text-decoration-style: solid;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  }
