--- a/src/app/features/fms/components/receipt/receipt.component.html
+++ b/src/app/features/fms/components/receipt/receipt.component.html
@@ -705,7 +705,9 @@
         <!-- Search Results Table -->
         <div class="row mt-3" *ngIf="clients.length > 0 ">
           <div class="col-md-12">
-            <p-table [value]="clients" responsiveLayout="scroll" class="table-striped"
+            <p-table [value]="clients" responsiveLayout="scroll" class="table-striped" [paginator]="true"
+            [rows]="5"
+            [rowsPerPageOptions]="[5, 10, 20]"
             selectionMode="single" 
             [(selection)]="selectedClient"
              dataKey="code">
